Successfully deploy to Firebase Functions
- Fixed Firebase Functions export format
- Deployed Express app with frontend interface to Firebase
- Application now live at: https://us-central1-mbserver-api-2025.cloudfunctions.net/api
- All endpoints working: /, /health, /api/users, /api/server-info
- Added deployment scripts and updated documentation
- Configured 7-day container image cleanup policy

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node index.js",
+    "deploy": "firebase deploy --only functions",
+    "deploy:check": "./deploy.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
